# OOP_4

./: CMakeLists.txt  main.cpp
include/: Array.h  Concepts.h  Figure.h  Pentagon.h  Point.h  Rhomb.h  Trapecy.h  utils.h
src/: utils.cpp
tests/: tests.cpp
